--- a/springai-CVanalyzer/src/main/resources/application.properties
+++ b/springai-CVanalyzer/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.application.name=spring-ai-chat
 # Server Configuration
 server.port=8080
 
-# --- KONFIGURASI GROQ (UPDATE TERBARU) ---
+#KONFIGURASI GROQ
 spring.ai.openai.api-key=gsk_xxxxxxxxxxxxxxxxxxxxx
 spring.ai.openai.base-url=https://api.groq.com/openai
 
-# GANTI KE MODEL BARU INI:
+
 spring.ai.openai.chat.options.model=llama-3.3-70b-versatile
 spring.ai.openai.chat.options.temperature=0.7
 
